--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Portofolio</a></li>
+            <li><a href="hobby.html">hobby</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="top-btn">
@@ -53,7 +53,7 @@
         </div>
         
         <p class="copyright">
-            &copy; wahyu@2024
+            &copy; kireii@2024
     </footer>
 
     <script src="script.js"></script>
