--- a/hobby.html
+++ b/hobby.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="ici.css">
-    <title>Ici</title>
+    <title>Ici Nopita Sari</title>
 </head>
 
 <body>
@@ -14,43 +14,52 @@
 
     <header>
         <a href="#home" class="logo">Ici Nopita Sari</a>
-
         <div class='bx bx-menu' id="menu-icon"></div>
-
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="hobby.html">hobby</a></li>
+            <li><a href="portofolio.html">Portofolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-
         <div class="top-btn">
             <a href="#contact" class="nav-btn">Contact Me</a>
         </div>
     </header>
 
-    <!-- Contact Section Code -->
+    <!-- Portfolio Section Code -->
+<div class="portfolio">
+    <h2>my hobby</h2>
+    <div class="portfolio-content">
+        <div class="polaroid">
+            <img src="icicantik.jpg.jpeg" alt="Image 1">
+        </div>
+        <div class="polaroid">
+            <img src="ici.f.jpeg" alt="Image 2">
+        </div>
+        <div class="polaroid">
+            <img src="icit.jpeg" alt="Image 3">
+        </div>
+        <div class="polaroid">
+            <img src="iciu.jpeg" alt="Image 4">
+        </div>
+         <div class="polaroid">
+            <img src="icis.jpeg" alt="Image 5">
+            <h4>SMA 2 Seluma</h4>
+        </div>
+        <div class="polaroid">
+            <img src="icia.jpeg" alt="Image 6">
+            <h4>SMA 9 Bengkulu Selatan</h4>
+        </div>
+        <div class="polaroid">
+            <img src="icill.jpeg" alt="Image 5">
+            <h4>SMA 3 Bengkulu Selatan</h4>
+        </div>
+        <div class="polaroid">
+            <img src="icil.jpeg" alt="Image 5">
+            <h4>SMA 7 Bengkulu Selatan</h4>
+        </div>
+</div>
 
-    <section class="contact" id="contact">
-
-        <h2 class="heading">Contact <span>Me</span></h2>
-
-        <form action="#">
-            <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
-            </div>
-            <div class="input-box">
-                <input type="text" placeholder="Phone Number">
-                <input type="text" placeholder="Email Subject">
-            </div>
-
-            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-
-    </section>
 
     <!-- Footer Section Code -->
 
