--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Portofolio</a></li>
+            <li><a href="hobby.html">hobby</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
@@ -77,87 +77,37 @@
 
     <section class="portfolio" id="portfolio">
 
-        <h2 class="heading">My <span>Portfolio</span></h2>
-
-        <div class="portfolio-content">
-            <div class="row">
-                <img src="assets/1.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="bx bxl-github"></i>
-                    </div>
-                </div>
-                <h4>Website Development</h4>
-            </div>
-
-            <div class="row">
-                <img src="assets/2.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="bx bxl-github"></i>
-                    </div>
-                </div>
-                <h4>Website Development</h4>
-            </div>
-
-            <div class="row">
-                <img src="assets/3.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="bx bxl-github"></i>
-                    </div>
-                </div>
-                <h4>Website Development</h4>
-            </div>
-
-            <div class="row">
-                <img src="assets/4.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="bx bxl-github"></i>
-                    </div>
-                </div>
-                <h4>Website Development</h4>
-            </div>
-
-            <div class="row">
-                <img src="assets/5.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="bx bxl-github"></i>
-                    </div>
-                </div>
-                <h4>Website Development</h4>
-            </div>
-
-            <div class="row">
-                <img src="assets/6.jpg" alt="">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Website Design</h5>
-                    </div>
-                    <div class="row-icon">
-                        <i class="bx bxl-github"></i>
-                    </div>
-                </div>
-                <h4>Website Development</h4>
-            </div>
+        <h2 class="heading">My <span>hobby</span></h2>
+    <div class="portfolio-content">
+        <div class="polaroid">
+            <img src="icicantik.jpg.jpeg" alt="Image 1">
         </div>
+        <div class="polaroid">
+            <img src="ici.f.jpeg" alt="Image 2">
+        </div>
+        <div class="polaroid">
+            <img src="icit.jpeg" alt="Image 3">
+        </div>
+        <div class="polaroid">
+            <img src="iciu.jpeg" alt="Image 4">
+        </div>
+         <div class="polaroid">
+            <img src="icis.jpeg" alt="Image 5">
+            <h4>SMA 2 Seluma</h4>
+        </div>
+        <div class="polaroid">
+            <img src="icia.jpeg" alt="Image 6">
+            <h4>SMA 9 Bengkulu Selatan</h4>
+        </div>
+        <div class="polaroid">
+            <img src="icill.jpeg" alt="Image 5">
+            <h4>SMA 3 Bengkulu Selatan</h4>
+        </div>
+        <div class="polaroid">
+            <img src="icil.jpeg" alt="Image 5">
+            <h4>SMA 7 Bengkulu Selatan</h4>
+        </div>
+</div>
 
     </section>
 
@@ -192,7 +142,7 @@
         </div>
 
         <p class="copyright">
-            &copy; wahyu@2024
+            &copy; kireii@2024
         </p>
     </footer>
 
